--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <title>Hello, World!</title>
-
+        <title>Home | Cole Swinford</title>
     </head>
+    <body>
+        <p>Hello, World!</p>
+    </body>
 </html>
