--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Home | Cole Swinford</title>
     </head>
     <body>
-        <p>Hello, World!</p>
-    </body>
+        Hello, World!
+    </body> 
 </html>
