first landing page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--Title-->
         <title>Home | Cole Swinford</title>
+ 
+        <!--Basic setup-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+
+        <!--Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        Hello, World!
+        <section class="header">
+            <nav>
+                <!--Navigation links-->
+                <div class="nav-links">
+                    <ul>
+                            <li><a href="">/home</a></li>
+                            <li><a href="">/about me</a></li>
+                            <li><a href="">/projects</a></li>
+                            <li><a href="">/contact</a></li>
+                            <li><a href="">/resume</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+        <div class="text-box">
+            <pHi>Hi, my name is<br><br></pHi>
+            <pName>Cole Swinford.<br></pName>
+            <pTagline>I build things.<br></pTagline>
+            <p>I'm a Computer Science and Engineering student at the University of Louisville. In my free time, I pick up new programming languages and work on personal/organization projects.</p>
+            <a href="" class="welcome-btn">take me away</a>
+        </div>
+        </section>
+        <!--
+            <div class="home-text">
+                <div class="box">Hi, my name is</div>
+                <div class="box">Cole Swinford</div>
+                <div class="box">I build things.</div>
+                <div class="box">I'm a Computer Science and Engineering student at the University of Louisville. In my free time, I pick up new programming languages and work on personal/organization projects.</div>
+            </div>
+        -->
     </body> 
 </html>
