--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/775bea9375.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <section class="header">
             <nav>
                 <!--Navigation links-->
-                <div class="nav-links">
+                <i class="fa-solid"></i>
+                <div class="nav-links" id="navLinks">
                     <ul>
-                            <li><a href="">/home</a></li>
-                            <li><a href="">/about me</a></li>
-                            <li><a href="">/projects</a></li>
-                            <li><a href="">/contact</a></li>
-                            <li><a href="">/resume</a></li>
+                        <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
+                        <li><a href="">/home</a></li>
+                        <li><a href="">/about me</a></li>
+                        <li><a href="">/projects</a></li>
+                        <li><a href="">/contact</a></li>
+                        <li><a href="">/resume</a></li>
                     </ul>
                 </div>
+                <i class="fa-solid fa-bars-staggered fa-flip-horizontal" onclick="showMenu()"></i>
             </nav>
 
         <div class="text-box">
@@ -36,13 +40,17 @@
             <a href="" class="welcome-btn">take me away</a>
         </div>
         </section>
-        <!--
-            <div class="home-text">
-                <div class="box">Hi, my name is</div>
-                <div class="box">Cole Swinford</div>
-                <div class="box">I build things.</div>
-                <div class="box">I'm a Computer Science and Engineering student at the University of Louisville. In my free time, I pick up new programming languages and work on personal/organization projects.</div>
-            </div>
-        -->
+
+<!--JavaScript Toggle Menu-->
+<script>
+    var navLinks = document.getElementById("navLinks");
+    function showMenu(){
+        navLinks.style.right = "0";
+    }
+    function hideMenu(){
+        navLinks.style.right = "-200px";
+    }
+</script>
+
     </body> 
 </html>
