--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <script src="https://kit.fontawesome.com/775bea9375.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <section class="header">
+<!-- Home Page -->
+        <section class="home-page">
+
             <nav>
                 <!--Navigation links-->
                 <i class="fa-solid"></i>
                 <div class="nav-links" id="navLinks">
                     <ul>
-                        <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
+                        <i class="fa-solid fa-xmark fa-2x" style="background:#323B42" onclick="hideMenu()"></i>
                         <li><a href="">/home</a></li>
                         <li><a href="">/about me</a></li>
                         <li><a href="">/projects</a></li>
@@ -29,8 +31,8 @@
                         <li><a href="">/resume</a></li>
                     </ul>
                 </div>
-                <i class="fa-solid fa-bars-staggered fa-flip-horizontal" onclick="showMenu()"></i>
-            </nav>
+                <i class="fa-solid fa-bars-staggered fa-flip-horizontal fa-2x" style="background:transparent" onclick="showMenu()"></i>
+            </nav>  
 
         <div class="text-box">
             <pHi>Hi, my name is<br><br></pHi>
@@ -39,6 +41,35 @@
             <p>I'm a Computer Science and Engineering student at the University of Louisville. In my free time, I pick up new programming languages and work on personal/organization projects.</p>
             <a href="" class="welcome-btn">take me away</a>
         </div>
+        </section>
+
+<!-- About Me -->
+        <section class="about-me">
+            <div class="about-text">
+                <p1>/</p1>
+                <p2>about me<br></p2>
+                <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering, where I apply engineering concepts to program development.<br><br></p3>
+                <p4>calculus + programming = magic</p4>
+                <p5><br><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
+                <p6><br><br>At the University of Louisville, I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data. I also serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop our on-car computer systems.<br><br></p6>
+                <p7>Skills<br>&nbsp;</p7>
+                <ul>
+                    <li>Python</li>
+                    <li>C/C++</li>
+                    <li>Java</li>
+                    <li>HTML/CSS</li>
+                    <li>Calculus I</li>
+                </ul>
+
+            </div>
+        </section>
+
+<!-- Projects -->
+        <section class="projects">
+            <div class="projects-text">
+                <p1>/</p1>
+                <p2>projects<br></p2>
+            </div>
         </section>
 
 <!--JavaScript Toggle Menu-->
