--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--Title-->
-        <title>Home | Cole Swinford</title>
+        <title>Cole Swinford</title>
  
         <!--Basic setup-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +16,8 @@
         <script src="https://kit.fontawesome.com/775bea9375.js" crossorigin="anonymous"></script>
     </head>
     <body>
-<!-- Home Page -->
-        <section class="home-page">
+        <!-- Home Page -->
+        <section class="home-page" id="home">
 
             <nav>
                 <!--Navigation links-->
@@ -25,11 +25,11 @@
                 <div class="nav-links" id="navLinks">
                     <ul>
                         <i class="fa-solid fa-xmark fa-2x" style="background:#323B42" onclick="hideMenu()"></i>
-                        <li><a href="">/home</a></li>
-                        <li><a href="">/about me</a></li>
-                        <li><a href="">/projects</a></li>
-                        <li><a href="">/contact</a></li>
-                        <li><a href="">/resume</a></li>
+                        <li><a href="#home">/home</a></li>
+                        <li><a href="#about">/about me</a></li>
+                        <li><a href="#projects">/projects</a></li>
+                        <li><a href="#contact">/contact</a></li>
+                        <li><a href="#resume">/resume</a></li>
                     </ul>
                 </div>
                 <i class="fa-solid fa-bars-staggered fa-flip-horizontal fa-2x" style="background:transparent" onclick="showMenu()"></i>
@@ -44,8 +44,8 @@
         </div>
         </section>
 
-<!-- About Me -->
-        <section class="about-me">
+        <!-- About Me -->
+        <section class="about-me" id="about">
             <div class="about-text">
                 <p1>/</p1>
                 <p2>about me<br></p2>
@@ -65,16 +65,30 @@
             </div>
         </section>
 
-<!-- Projects -->
-        <section class="projects">
+        <!-- Projects -->
+        <section class="projects" id="projects">
             <div class="projects-text">
                 <p1>/</p1>
                 <p2>projects<br></p2>
+                <p3><br>featured project<br></p3>
+                <p4><a href="">EZ Hotkey</a></p4>
+                <p5>A free, simple, and easy-to-use hotkey program for Windows. This .exe file written in Python allows the user to define an input for their hotkey and an output for when said input is pressed. EZ Hotkey stays alive when minimized, so you can keep using your hotkeys!</p5>
+                <img class="EZHotkey" src="images/EZ Hotkey.png">
             </div>
         </section>
 
-<!--JavaScript Toggle Menu-->
+        <!-- Other Projects -->
+        <section class="other-projects">
+            <div class="other-projects-text">
+                <p1>other noteworthy projects</p1>
+                <p2><a href="">test left</a></p2>
+                <p3><a href="">test middle</a></p3>
+                <p4><a href="">test right</a></p4>
+            </div>
+</section>
+
 <script>
+    //JavaScript Toggle Menu
     var navLinks = document.getElementById("navLinks");
     function showMenu(){
         navLinks.style.right = "0";
