--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <pName>Cole Swinford.<br></pName>
             <pTagline>I build things.<br></pTagline>
             <p>I'm a Computer Science and Engineering student at the University of Louisville. In my free time, I pick up new programming languages and work on personal/organization projects.</p>
-            <a href="" class="welcome-btn">take me away</a>
+            <a href="#about" class="welcome-btn">take me away</a>
         </div>
         </section>
 
@@ -71,7 +71,7 @@
                 <p1>/</p1>
                 <p2>projects<br></p2>
                 <p3><br>featured project<br></p3>
-                <p4><a href="">EZ Hotkey</a></p4>
+                <p4><a href="https://github.com/ColeSwinford/Python--EZ-Hotkey">EZ Hotkey</a></p4>
                 <p5>A free, simple, and easy-to-use hotkey program for Windows. This .exe file written in Python allows the user to define an input for their hotkey and an output for when said input is pressed. EZ Hotkey stays alive when minimized, so you can keep using your hotkeys!</p5>
                 <img class="EZHotkey" src="images/EZ Hotkey.png">
             </div>
