--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <div class="nav-links" id="navLinks">
                     <ul>
                         <i class="fa-solid fa-xmark fa-2x" style="background:#323B42" onclick="hideMenu()"></i>
-                        <li><a href="#home">/home</a></li>
-                        <li><a href="#about">/about me</a></li>
-                        <li><a href="#projects">/projects</a></li>
-                        <li><a href="#contact">/contact</a></li>
-                        <li><a href="#resume">/resume</a></li>
+                        <li><a href="#home" onclick="hideMenu()">/home</a></li>
+                        <li><a href="#about" onclick="hideMenu()">/about me</a></li>
+                        <li><a href="#projects" onclick="hideMenu()">/projects</a></li>
+                        <li><a href="#contact" onclick="hideMenu()">/contact</a></li>
+                        <li><a href="#resume" onclick="hideMenu()">/resume</a></li>
                     </ul>
                 </div>
                 <i class="fa-solid fa-bars-staggered fa-flip-horizontal fa-2x" style="background:transparent" onclick="showMenu()"></i>
