replaced ez hotkey png with svg

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
             <div class="projects-text">
                 <p1>/</p1>
                 <p2>projects<br></p2>
-                <p3><br>featured project<br></p3>
-                <p4><a href="https://github.com/ColeSwinford/Python--EZ-Hotkey">EZ Hotkey</a></p4>
-                <p5>A free, simple, and easy-to-use hotkey program for Windows. This .exe file written in Python allows the user to define an input for their hotkey and an output for when said input is pressed. EZ Hotkey stays alive when minimized, so you can keep using your hotkeys!</p5>
-                <img class="EZHotkey" src="images/EZ Hotkey.png">
+                <p3>a commitment to open-source<br></p3>
+                <p4>As a proud supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
+                <p5><br>featured project<br></p5>
+                <p6><a href="https://github.com/ColeSwinford/Python--EZ-Hotkey">EZ Hotkey</a></p6>
+                <p7>A free, open-source, and easy-to-use hotkey program for Windows. This .exe file written in Python allows users to quickly define an input (hotkey) and an output (action upon input actuation). EZ Hotkey stays alive when minimized, so you can keep using your hotkeys!</p7>
+                <img class="EZHotkey" viewBox="0 0 auto auto" preserveAspectRatio="meet" src="images/EZ Hotkey.svg">
             </div>
         </section>
 
