--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Cole Swinford</title>
  
         <!--Basic setup-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="Images/TabIcon.png">
 
@@ -98,6 +98,11 @@
     function hideMenu(){
         navLinks.style.right = "-200px";
     }
+
+    /*var scale = Math.min( 
+    availableWidth / contentWidth, 
+    availableHeight / contentHeight 
+    );*/
 </script>
 
     </body> 
