--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
             availableHeight / contentHeight 
             );*/
         </script>
-
+ 
+ <!--Footer--> 
+        <footer style="height:auto; background-color:#b7c5d3;">
+            <h1><Made with 🤍 by Cole Swinford</h1>
+        </footer>
     </body> 
 </html>
