--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <!--Navigation links-->
                 <i class="fa-solid"></i>
-                <div class="nav-links">
+                <div class="nav-links" id="navBar">
                     <ul>
                         <i class="fa-solid fa-xmark fa-2x" style="background:#323B42" onclick="hideMenu()"></i>
                         <li><a href="#about" onclick="hideMenu()">/about me</a></li>
@@ -115,6 +115,12 @@
                 </ul>
             </div>
         </section>
+        <!--Footer-->
+        <section class="footer">
+            <div class="footer-text">
+                <p1><br>designed and built by<br>Cole Swinford</p1>
+            </div>
+        </section>
 
         <script>
             //Nav bar
@@ -138,10 +144,6 @@
             availableHeight / contentHeight 
             );*/
         </script>
- 
- <!--Footer--> 
-        <footer style="height:auto; background-color:#b7c5d3;">
-            <h1><Made with 🤍 by Cole Swinford</h1>
-        </footer>
+
     </body> 
 </html>
