--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
         <section class="other-projects">
             <div class="other-projects-text">
                 <p1>other noteworthy projects</p1>
-                <p2><a href="">test left</a></p2>
-                <p3><a href="">test middle</a></p3>
-                <p4><a href="">test right</a></p4>
+                <p2><a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot">
+                    <span><br><br>Funky Monkey Friday<br></span>
+                    <p3><br><br>An open-source, configurable Discord bot that alerts your server when it's Funky Monkey Friday!
+                    <br><br><br><br>Python &emsp; Discord.py</p3>
+                </a></p2>
             </div>
         </section>
 
