--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         <li><a href="#exp" onclick="hideMenu()">/experience</a></li>
                         <li><a href="#projects" onclick="hideMenu()">/projects</a></li>
                         <li><a href="#contact" onclick="hideMenu()">/contact</a></li>
-                        <li><a href="#resume" onclick="hideMenu()" id="resume-btn">/resume</a></li>
+                        <!--<li><a href="#resume" onclick="hideMenu()" id="resume-btn">/resume</a></li
+                        -->
                     </ul>
                 </div>
                 <i class="fa-solid fa-bars-staggered fa-flip-horizontal fa-2x" style="background:transparent" onclick="showMenu()"></i>
