updated other projects

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                     <p3><br><br>An open-source, configurable Discord bot that alerts your server when it's Funky Monkey Friday!
                     <br><br><br><br>Python &emsp; Discord.py</p3>
                 </a></p2>
+                <p4><a href="https://github.com/ColeSwinford/C--PhoneBook">
+                    <span><br><br>Phone Book<br></span>
+                    <p5><br><br>Open-Source, Command line Phone Book<br><br>
+                    <br><br><br><br>C</p5>
+                </a></p4>
             </div>
         </section>
 
