--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Cole Swinford</title>
  
         <!--Basic setup-->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="Images/Logo.svg">
+        <link rel="icon" href="Images/Logo.svg?">
 
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
