--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--Basic setup-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="Images/Logo.svg?">
+        <link rel="icon" type="svg" href="Images/Logo.svg?">
 
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
