added grid, streamlined adding other projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!--Title-->
         <title>Cole Swinford</title>
- 
+
         <!--Basic setup-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
         <script src="https://kit.fontawesome.com/775bea9375.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <!-- Home Page -->
+        <!--Home Page-->
         <section class="home-page">
             <nav>
                 <!--Navigation links-->
@@ -28,8 +28,6 @@
                         <li><a href="#exp" onclick="hideMenu()">/experience</a></li>
                         <li><a href="#projects" onclick="hideMenu()">/projects</a></li>
                         <li><a href="#contact" onclick="hideMenu()">/contact</a></li>
-                        <!--<li><a href="#resume" onclick="hideMenu()" id="resume-btn">/resume</a></li
-                        -->
                     </ul>
                 </div>
                 <i class="fa-solid fa-bars-staggered fa-flip-horizontal fa-2x" style="background:transparent" onclick="showMenu()"></i>
@@ -45,7 +43,7 @@
             </div>
         </section>
 
-        <!-- About Me -->
+        <!--About Me-->
         <section class="about-me" id="about">
             <div class="about-text">
                 <p1>/</p1>
@@ -61,12 +59,12 @@
                     <li>Python</li>
                     <li>HTML/CSS</li>
                     <li>JavaScript</li>
-                    <li>Calculus I</li>
+                    <li>Calculus I, II, III</li>
                 </ul>
             </div>
         </section>
 
-        <!-- Work -->
+        <!--Work-->
         <section class="exp" id="exp">
             <div class="exp-title">
                 <p1>/</p1>
@@ -77,13 +75,13 @@
             </div>
         </section>
 
-        <!-- Projects -->
+        <!--Projects-->
         <section class="projects" id="projects">
             <div class="projects-text">
                 <p1>/</p1>
                 <p2>projects<br></p2>
                 <p3>a commitment to open-source<br></p3>
-                <p4>As a proud supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
+                <p4>As an avid supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
                 <p5><br>featured project<br></p5>
                 <p6><a href="https://github.com/ColeSwinford/Python--EZ-Hotkey">EZ Hotkey<br></a></p6>
                 <p7>A free, open-source, and easy-to-use hotkey program for Windows. This .exe file written in Python allows users to quickly define an input (hotkey) and an output (action upon input actuation). EZ Hotkey stays alive when minimized, so you can keep using your hotkeys!</p7>
@@ -91,24 +89,24 @@
             </div>
         </section>
 
-        <!-- Other Projects -->
+        <!--Other Projects-->
         <section class="other-projects">
-            <div class="other-projects-text">
-                <p1>other noteworthy projects</p1>
-                <p2><a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot">
-                    <span><br><br>Funky Monkey Friday<br></span>
-                    <p3><br><br>An open-source, configurable Discord bot that alerts your server when it's Funky Monkey Friday!
-                    <br><br><br><br>Python &emsp; Discord.py</p3>
-                </a></p2>
-                <p4><a href="https://github.com/ColeSwinford/C--PhoneBook">
-                    <span><br><br>Phone Book<br></span>
-                    <p5><br><br>Open-Source, Command line Phone Book<br><br>
-                    <br><br><br><br>C</p5>
-                </a></p4>
+            <p1>other noteworthy projects</p1>
+            <div class="other-projects-card-container">
+                <div class="other-projects-card"><a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot">
+                    <span>Funky Monkey Friday</span>
+                    <p1>An open-source, configurable Discord bot that alerts your server when it's Funky Monkey Friday!
+                    <br><br><br><br>Python &emsp; Discord.py<br><br><br><br></p1>
+                </a></div>
+                <div class="other-projects-card"><a href="https://github.com/ColeSwinford/C--PhoneBook">
+                    <span>Phone Book</span>
+                    <p1>Open-Source, Command line Phone Book
+                    <br><br><br><br><br><br>C<br><br><br><br></p1>
+                </a></div>
             </div>
         </section>
 
-        <!-- Contact -->
+        <!--Contact-->
         <section class="contact-page" id="contact">
             <div class="contact-text">
                 <p1>/</p1>
