updated about me

--- a/index.html
+++ b/index.html
@@ -48,17 +48,19 @@
             <div class="about-text">
                 <p1>/</p1>
                 <p2>about me<br></p2>
-                <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering, where I apply engineering concepts to program development.<br><br></p3>
-                <p4>engineering + programming = magic</p4>
+                <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering, where I apply engineering concepts to computer development.<br><br></p3>
+                <p4>engineering + computers = magic</p4>
                 <p5><br><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
-                <p6><br><br>At the University of Louisville, I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data. I also serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop our on-car computer systems.<br><br></p6>
+                <p6><br><br>At the University of Louisville, <!--I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data.-->I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop our on-car computer systems.<br><br></p6>
                 <p7>Skills<br>&nbsp;</p7>
                 <ul>
                     <li>C/C++</li>
-                    <li>Java</li>
                     <li>Python</li>
+                    <li>Java</li>
                     <li>HTML/CSS</li>
                     <li>JavaScript</li>
+                    <li>SQL</li>
+                    <li>Introductory Logic Design</li>
                     <li>Calculus I, II, III</li>
                 </ul>
             </div>
