--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li>HTML/CSS</li>
                     <li>JavaScript</li>
                     <li>SQL</li>
-                    <li>Introductory Logic Design</li>
+                    <li>Logic Design</li>
                     <li>Calculus I, II, III</li>
                 </ul>
             </div>
