--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                 <p1>/</p1>
                 <p2>about me<br></p2>
                 <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering, where I apply engineering concepts to computer development.<br><br></p3>
-                <p4>engineering + computers = magic</p4>
+                <p4>Learning by doing</p4>
                 <p5><br><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
-                <p6><br><br>At the University of Louisville, <!--I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data.-->I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop our on-car computer systems.<br><br></p6>
+                <p6><br><br>At the University of Louisville, <!--I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data.-->I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop on-car computer systems.</p6>
+                <p8><br><br>I'm also a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.<br><br></p8>
                 <p7>Skills<br>&nbsp;</p7>
                 <ul>
                     <li>C/C++</li>
