improved og image preview

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Cole Swinford</title>
 
         <!--Page Preview-->
-        <meta property="og:image" content="https://coleswinford.com/images/preview.png"/> <!--image to put on the preview-->
+        <meta property="og:image" content="https://coleswinford.com/images/preview.jpg"/> <!--image to put on the preview-->
 
         <!--Basic setup-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
