--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Cole Swinford</title>
 
         <!--Page Preview-->
-        <meta propert="og:description" content="Computer Science Engineer&mdashI build things. "> <!--preview description-->
+        <meta property="og:description" content="Computer Science Engineer&mdashI build things. "/> <!--preview description-->
         <meta property="og:image" content="https://coleswinford.com/images/preview.jpg"/> <!--image to put on the preview-->
 
         <!--Basic setup-->
