--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <li>HTML/CSS</li>
                     <li>JavaScript</li>
                     <li>SQL</li>
+                    <li>Data Structures</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
                     <li>Calculus I, II, III</li>
                 </ul>
