--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!--Title-->
+    <head>        
+        <!--Basic setup-->
         <title>Cole Swinford</title>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Computer Science Engineer&mdash;I build things.">
+        <meta name="author" content="Cole Swinford">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/svg+xml" href="images/Logo.svg?">
+        
         <!--Page Preview-->
         <meta property="og:description" content="Computer Science Engineer&mdash;I build things."/> <!--preview description-->
         <meta property="og:image" content="https://coleswinford.com/images/preview.jpg"/> <!--image to put on the preview-->
-
-        <!--Basic setup-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/svg+xml" href="images/Logo.svg?">
 
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
