fixed rogue space cutting into "Skills" subeader

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p5><br><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
                 <p6><br><br>At the University of Louisville, <!--I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data.-->I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop on-car computer systems.</p6>
                 <p8><br><br>I'm also a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.<br><br></p8>
-                <p7>Skills<br>&nbsp;</p7>
+                <p7>Skills<br></p7>
                 <ul>
                     <li>C/C++</li>
                     <li>Python</li>
