--- a/index.html
+++ b/index.html
@@ -101,16 +101,18 @@
         <section class="other-projects">
             <p1>other noteworthy projects</p1>
             <div class="other-projects-card-container">
-                <div class="other-projects-card"><a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot">
+                <a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot"><div class="other-projects-card">
+                    <img src="https://source.unsplash.com/user/c_v_r/1900x800">
                     <span>Funky Monkey Friday</span>
-                    <p1>An open-source, configurable Discord bot that alerts your server when it's Funky Monkey Friday!
-                    <br><br><br><br>Python &emsp; Discord.py<br><br><br><br></p1>
-                </a></div>
-                <div class="other-projects-card"><a href="https://github.com/ColeSwinford/C--PhoneBook">
+                    <p1>Discord bot that alerts your server when it's Funky Monkey Friday
+                    <br><br>Python &emsp; Discord.py</p1>
+                </div></a>
+                <a href="https://github.com/ColeSwinford/C--PhoneBook"><div class="other-projects-card">
+                    <img src="https://source.unsplash.com/user/c_v_r/1900x800">
                     <span>Phone Book</span>
-                    <p1>Open-Source, Command line Phone Book
-                    <br><br><br><br><br><br>C<br><br><br><br></p1>
-                </a></div>
+                    <p1>Command line Phone Book
+                    <br><C</p1>
+                </div></a>
             </div>
         </section>
 
