--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
             <p1>other noteworthy projects</p1>
             <div class="other-projects-card-container">
                 <a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot"><div class="other-projects-card">
-                    <img src="https://source.unsplash.com/user/c_v_r/1900x800">
+                    <img src="images/FMF.png">
                     <span>Funky Monkey Friday</span>
                     <p1>Discord bot that alerts your server when it's Funky Monkey Friday
-                    <br><br>Python &emsp; Discord.py</p1>
+                    <br><br>Python &emsp; discord.py</p1>
                 </div></a>
                 <a href="https://github.com/ColeSwinford/C--PhoneBook"><div class="other-projects-card">
-                    <img src="https://source.unsplash.com/user/c_v_r/1900x800">
+                    <img src="images/phoneBook.png">
                     <span>Phone Book</span>
                     <p1>Command line Phone Book
-                    <br><C</p1>
+                    <br><br><br>C</p1>
                 </div></a>
             </div>
         </section>
