added Github logo to identify other project link

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                     <img src="images/FMF.png">
                     <span>Funky Monkey Friday</span>
                     <p1>Discord bot that alerts your server when it's Funky Monkey Friday
-                    <br><br>Python &emsp; discord.py</p1>
+                    <br><br>Python &emsp; discord.py <i class="fa-brands fa-github"></i></p1>
                 </div></a>
                 <a href="https://github.com/ColeSwinford/C--PhoneBook"><div class="other-projects-card">
                     <img src="images/phoneBook.png">
                     <span>Phone Book</span>
                     <p1>Command line Phone Book
-                    <br><br><br>C</p1>
+                    <br><br><br>C <i class="fa-brands fa-github"></i></p1>
                 </div></a>
             </div>
         </section>
