Separated JS into it's own file

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                 </ul>
             </div>
         </section>
+
         <!--Footer-->
         <section class="footer">
             <div class="footer-text">
@@ -138,28 +139,8 @@
             </div>
         </section>
 
-        <script>
-            //Nav bar
-            var nav = document.getElementById("navBar");
-            function showMenu(){
-                nav.style.right = "0";
-            }
-            function hideMenu(){
-                nav.style.right = "-200px";
-            }
-
-            //Copy email
-            function copyEmail(){
-                var copyText = "site.coleswinford@gmail.com";
-                navigator.clipboard.writeText(copyText);
-                alert("Copied the text: " + '"'+copyText+'"' + " to clipboard.");
-            }
-
-            /*var scale = Math.min( 
-            availableWidth / contentWidth, 
-            availableHeight / contentHeight 
-            );*/
-        </script>
+        <!--JavaScript-->
+        <script src="main.js"></script>
 
     </body> 
 </html>
