--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 <p3>a commitment to open-source<br></p3>
                 <p4>As an avid supporter of Free and Open-Source Software (FOSS), all my projects are open-source (including this website!)<br><br></p4>
                 <p5><br>featured project<br></p5>
-                <p6><a href="https://github.com/ColeSwinford/Python--EZ-Hotkey">EZ Hotkey<br></a></p6>
-                <p7>Easy-to-use hotkey program for Windows. This .exe file written in Python allows users to quickly define an input (hotkey) and an output (action upon input actuation). EZ Hotkey stays alive when minimized, so you can keep using your hotkeys!</p7>
-                <img class="EZHotkey" viewBox="0 0 auto auto" preserveAspectRatio="meet" src="images/EZ Hotkey.svg">
+                <p6><a href="https://www.zenodoro.com/">Zenodoro<br></a></p6>
+                <p7>Relaxing, zen-themed pomodoro timer</p7>
+                <img class="featured" viewBox="0 0 auto auto" preserveAspectRatio="meet" src="images/zenodoro.png">
             </div>
         </section>
 
@@ -102,12 +102,18 @@
         <section class="other-projects">
             <p1>other noteworthy projects</p1>
             <div class="other-projects-card-container">
-                <a href="https://www.zenodoro.com/"><div class="other-projects-card">
+                <a href="https://github.com/ColeSwinford/Python--EZ-Hotkey"><div class="other-projects-card">
+                    <img src="images/EZ_Hotkey.png">
+                    <span>EZ Hotkey</span>
+                    <p1>Easy-to-use hotkey program for Windows
+                    <br><br><br>Python <i class="fa-brands fa-github"></i></p1>
+                </div></a>
+                <!-- <a href="https://www.zenodoro.com/"><div class="other-projects-card">
                     <img src="images/zenodoro.png">
                     <span>Zenodoro</span>
                     <p1>Relaxing, zen-themed pomodoro timer
                     <br><br><br>HTML &emsp; CSS &emsp; JavaScript <i class="fa-solid fa-globe"></i></p1>
-                </div></a>
+                </div></a> -->
                 <a href="https://github.com/ColeSwinford/Python--Funky-Monkey-Friday-Bot"><div class="other-projects-card">
                     <img src="images/FMF.png">
                     <span>Funky Monkey Friday</span>
