updated preview image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <!--Page Preview-->
         <meta property="og:description" content="Computer Science Engineer&mdash;I build things."/> <!--preview description-->
-        <meta property="og:image" content="https://coleswinford.com/images/preview.jpg"/> <!--image to put on the preview-->
+        <meta property="og:image" content="https://coleswinford.com/images/previewCOM.jpg"/> <!--image to put on the preview-->
 
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
