--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <p2>about me<br></p2>
                 <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering, where I apply engineering concepts to computer development.<br><br></p3>
                 <p4>Learning by doing</p4>
-                <p5><br><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
-                <p6><br><br>At the University of Louisville, <!--I'm a member on River City Rocketry (RCR) Avionics sub-team where I work with other engineers to gather, manipulate, and act on in-flight rocket data.-->I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop on-car computer systems.</p6>
+                <p5><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
+                <p6><br><br>At the University of Louisville, I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop on-car computer systems.</p6>
                 <p8><br><br>I'm also a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.<br><br></p8>
                 <p7>Skills<br></p7>
                 <ul>
@@ -79,8 +79,8 @@
                 <p1>/</p1>
                 <p2>experience<br></p2>
                 <p3>Status...</p3>
-                <p4>searching for internship experience<br><br><br></p4>
-                <p5><a onclick="" class="company1">Your company here</a></p5>
+                <p4>interning at iGear Online<br><br><br></p4>
+                <p5><a onclick="" class="company1">iGear Online</a></p5>
             </div>
         </section>
 
