--- a/index.html
+++ b/index.html
@@ -79,8 +79,36 @@
                 <p1>/</p1>
                 <p2>experience<br></p2>
                 <p3>Status...</p3>
-                <p4>interning at iGear Online<br><br><br></p4>
-                <p5><a onclick="" class="company1">iGear Online</a></p5>
+                <p4>Software Engineer co-op @ iGear<br><br><br></p4>
+                <!-- <p5><a onclick="" class="company1">iGear Online</a></p5> -->
+                <style>
+                    .companies{
+                      list-style-type: none;
+                      display: grid;
+                      grid-template-columns: 1fr;
+                      grid-row-gap: 3vh;
+                    }
+                </style>
+                <ul class="companies">
+                    <li><a onclick="changeText('iGear')">iGear</a></li>
+                    <li><a onclick="changeText('company2')">Option 2</a></li>
+                    <li><a onclick="changeText('company3')">Option 3</a></li>
+                </ul>
+                
+                <div id=exp-container>
+                    <div id="title-display">
+                        Software Engineer Co-op
+                    </div>
+                    <div>
+                        <a href="https://www.igear.com/" id="company-display">iGear</a>
+                    </div>
+                    <div id="dates-display">
+                        January - May 2023
+                    </div>
+                    <div id="desc-display">
+                        Full stack engineer
+                    </div>
+                </div>
             </div>
         </section>
 
