completed experience section

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 </style>
                 <ul class="companies">
                     <li><a onclick="changeText('iGear')">iGear</a></li>
-                    <li><a onclick="changeText('company2')">Option 2</a></li>
-                    <li><a onclick="changeText('company3')">Option 3</a></li>
+                    <!-- <li><a onclick="changeText('company2')">Option 2</a></li> -->
+                    <!-- <li><a onclick="changeText('company3')">Option 3</a></li> -->
                 </ul>
                 
                 <div id=exp-container>
@@ -106,7 +106,8 @@
                         January - May 2023
                     </div>
                     <div id="desc-display">
-                        Full stack engineer
+                        <ul id="desc-bullets">
+                        </ul>
                     </div>
                 </div>
             </div>
