added link in job status

--- a/index.html
+++ b/index.html
@@ -76,10 +76,19 @@
         <!--Work-->
         <section class="exp" id="exp">
             <div class="exp-title">
+                <style>
+                    .no-wrap {
+                        white-space: nowrap;
+                    }
+                </style>
                 <p1>/</p1>
                 <p2>experience<br></p2>
                 <p3>Status...</p3>
-                <p4>Software Engineer co-op @ iGear<br><br><br></p4>
+                <span>
+                    <p4>Software Engineer co-op @ </p4>
+                    <p5><a href="https://www.igear.com/">iGear</a></p5>
+                </span>
+                <p6><br><br><br></p6>
                 <!-- <p5><a onclick="" class="company1">iGear Online</a></p5> -->
                 <style>
                     .companies{
