updated skills, experience

--- a/index.html
+++ b/index.html
@@ -53,19 +53,30 @@
             <div class="about-text">
                 <p1>/</p1>
                 <p2>about me<br></p2>
-                <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering, where I apply engineering concepts to computer development.<br><br></p3>
+                <p3>Hello! My name is Cole Swinford, and I enjoy all things technology. A deep fascination with computers has lead me to study Computer Science and Engineering.<br><br></p3>
                 <p4>Learning by doing</p4>
-                <p5><br>I'm always on the lookout for new learning experiences where I can combine my engineering and computer science skills.</p5>
-                <p6><br><br>At the University of Louisville, I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I work with others to develop on-car computer systems.</p6>
-                <p8><br><br>I'm also a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.<br><br></p8>
+                <p5><br>I'm always on the lookout for new ways to learn and grow my skills.</p5>
+                <p6>
+                    <br><br>
+                    At the University of Louisville, I serve as the Electrical/Computer Engineering Lead for the Speed Formula Society of Automotive Engineers (FSAE) team, where I head development of computer/software systems.
+                </p6>
+                <p8>
+                    <br><br>
+                    I'm also a Student Success Ambassador who guides freshman engineering students through their first year of college! This includes regular communication/meetings, holding weekly office hours, and working alongside introductory engineering course professors.
+                </p8>
+                <p8>
+                    <br><br>
+                    Most recently, I have become a student representative for the University of Louisville's Computer Science and Engineering department. I work with the department chair to help improve the student experience and adhere to ABET standards.
+                    <br><br>
+                </p8>
                 <p7>Skills<br></p7>
                 <ul>
-                    <li>C/C++</li>
+                    <li>C, C++</li>
                     <li>Python</li>
                     <li>Java</li>
-                    <li>HTML/CSS</li>
-                    <li>JavaScript</li>
+                    <li>HTML, CSS, JavaScript</li>
                     <li>SQL</li>
+                    <li>C#, XAML</li>
                     <li>Data Structures</li>
                     <li>Logic Design, Multisim, Vivado, VHDL, FPGAs</li>
                     <li>Calculus I, II, III</li>
